--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \include{chapters/02Petrinetze}
 \include{chapters/03Verifikation}
 \include{chapters/04relatedWork}
-\include{chapters/05conclusion}
+%\include{chapters/05conclusion}
 \bibliography{IEEEabrv,literature}
 \bibliographystyle{IEEEtran}
 
