--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
 
 \include{chapters/titlepage}
 \frontmatter
-\include{chapters/00abstract}
+%\include{chapters/00abstract}
 \tableofcontents
 \newpage
 \markright{\nomname}
